--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,6 +1,6 @@
 body {
-  max-width: 1200px;
-  margin: 2% 10%;
+  margin: 2% 6%;
+  max-width: 1200;
 }
 
 header {
@@ -10,8 +10,8 @@ header {
 
 section {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 h1 {
@@ -19,7 +19,7 @@ h1 {
 }
 
 button {
-  width: 400px;
+  width: 200px;
   height: 30px;
   color: #fff;
   background-color: #43B02A;
@@ -31,15 +31,31 @@ button:hover {
   cursor: pointer;
 }
 
-.inventory {
-  border: 1px solid #63666A;
-  color: #63666A;
-  margin: 20px 0;
-  padding: 10px;
-  width: 800px;
-  min-height: 400px;
-}
-
 .logo {
   width: 50px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form, .inventory {
+  border: 1px solid #63666A;
+  border-radius: 5px;
+  color: #63666A;
+  padding: 10px;
+}
+
+.form {
+  margin: 10px;
+  width: 300px;
+  height: 300px;
+}
+
+.inventory {
+  margin: 20px 0;
+  min-width: 618px;
+  min-height: 400px;
 }
